fixed many bugs, added several important validations

--- a/LeaveManager.Api/assets/styles/main.css
+++ b/LeaveManager.Api/assets/styles/main.css
@@ -8144,12 +8144,17 @@ button.close {
     display: none !important;
   }
 }
-/* line 14, main.scss */
+@font-face {
+  font-family: 'Glyphicons Halflings';
+  src: url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.eot");
+  src: url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
+}
+/* line 20, main.scss */
 html, body {
   position: relative;
 }
 
-/* line 17, main.scss */
+/* line 23, main.scss */
 .main-form {
   position: absolute;
   right: 0;
@@ -8162,12 +8167,12 @@ html, body {
   min-height: 100%;
 }
 
-/* line 29, main.scss */
+/* line 35, main.scss */
 .control-group {
   margin-bottom: 20px;
 }
 
-/* line 32, main.scss */
+/* line 38, main.scss */
 .error-messages.ng-active {
   background: maroon;
   color: white;
@@ -8177,7 +8182,7 @@ html, body {
   position: relative;
 }
 
-/* line 40, main.scss */
+/* line 46, main.scss */
 .error-messages.ng-active:after {
   position: absolute;
   top: -10px;
@@ -8188,7 +8193,7 @@ html, body {
   border-width: 5px;
 }
 
-/* line 59, main.scss */
+/* line 65, main.scss */
 .security-box {
   border: 1px solid lightgray;
   padding: 4px;
