--- a/LeaveManager.Api/assets/styles/main.scss
+++ b/LeaveManager.Api/assets/styles/main.scss
@@ -1,5 +1,11 @@
 @import "../lib/bootstrap-sass-official/assets/stylesheets/bootstrap";
 
+@font-face {
+	font-family: 'Glyphicons Halflings';
+	src: url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.eot");
+	src: url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("../lib/bootstrap-sass-official/assets/fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
+}
+
 // for form
 form {
 	.columns .form-group {
